tree-sitter-kea/grammar.js
    source_file: ($) => repeat($._top_level),

    _top_level: ($) =>
      choice(
        seq($._declaration, optional($.newline)),
        seq($._expression, optional($.newline)),
      ),

    // ── Doc blocks ──────────────────────────────────────────────
    // Handled entirely by the external scanner.  The scanner matches
    // `doc` + optional inline text + indented body lines (including
    // blank lines within the body).

    // ── Declarations ──────────────────────────────────────────────

    _type: ($) =>
      choice(
        $.named_type,
        $.applied_type,
        $.function_type,
        $.effect_function_type,
        $.fn_type,
        $.fn_effect_type,
        $.row_type,
        $.paren_type,
      ),

    // Simple types for applied_type args and effect_ref args.
    _expression: ($) =>
      choice(
        $.let_expression,
        $.if_expression,
        $.case_expression,
        $.cond_expression,
        $.handle_expression,
        $.catch_expression,
        $.fail_expression,
        $.for_expression,
        $.while_expression,
        $.lambda_expression,
        $.binary_expression,
        $.unary_expression,
        $._postfix_expression,
        $._primary_expression,
      ),

    let_expression: ($) =>
      prec.right(seq(
        "let",
        field("pattern", $._pattern),
        optional(seq(":", field("type", $._type))),
        "=",
        field("value", $._expression),
        optional(field("body", $._expression)),
      )),

    if_expression: ($) =>
      prec.right(seq(
        "if",
        field("condition", $._expression),
        field("then", choice($._expression, $._block)),
        optional(seq(
          "else",
          field("else", choice($._expression, $._block)),
        )),
      )),

    case_expression: ($) =>
      prec.right(seq(
        "case",
        field("scrutinee", $._expression),
        $.indent,
        repeat1(seq($.case_arm, optional($.newline))),
        $.dedent,
      )),

    case_arm: ($) =>
      prec.right(seq(
        field("pattern", $._pattern),
        optional(seq("when", field("guard", $._expression))),
        "->",
        field("body", choice($._expression, $._block)),
      )),

    cond_expression: ($) =>
      prec.right(seq(
        "cond",
        $.indent,
        repeat1(seq($.cond_arm, optional($.newline))),
        $.dedent,
      )),

    cond_arm: ($) =>
      prec.right(seq(
        field("condition", $._expression),
        "->",
        field("body", choice($._expression, $._block)),
      )),

    lambda_expression: ($) =>
      prec.right(seq(
        "|",
        commaSep($.lambda_parameter),
        "|",
        field("body", choice($._expression, $._block)),
      )),

    lambda_parameter: ($) =>
      seq(
        field("pattern", $._pattern),
        optional(seq(":", field("type", $._type))),
      ),

    binary_expression: ($) =>
      choice(
        prec.left(PREC.or, seq($._expression, "or", $._expression)),
        prec.left(PREC.and, seq($._expression, "and", $._expression)),
        prec.left(PREC.equality, seq($._expression, choice("==", "!="), $._expression)),
        prec.left(PREC.comparison, seq($._expression, choice("<", "<=", ">", ">="), $._expression)),
        prec.left(PREC.concat, seq($._expression, choice("++", "<>"), $._expression)),
        prec.left(PREC.additive, seq($._expression, choice("+", "-"), $._expression)),
        prec.left(PREC.multiplicative, seq($._expression, choice("*", "/", "%"), $._expression)),
      ),

    call_expression: ($) =>
      prec(PREC.postfix, seq(
        field("function", $._expression),
        "(",
        commaSep($._expression),
        ")",
      )),

    field_expression: ($) =>
      prec(PREC.postfix, seq(
        field("object", $._expression),
        ".",
        field("field", choice($.identifier, $.upper_identifier, $.integer)),
      )),

    list_expression: ($) => seq("[", commaSep($._expression), "]"),

    constructor_expression: ($) =>
      field("constructor", $.upper_identifier),

    _pattern: ($) =>
      choice(
        $.wildcard_pattern,
        $.variable_pattern,
        $.literal_pattern,
        $.constructor_pattern,
        $.list_pattern,
        $.struct_pattern,
        $.or_pattern,
        $.as_pattern,
        $.parenthesized_pattern,
      ),

    wildcard_pattern: (_$) => "_",

    variable_pattern: ($) => prec(-1, $.identifier),

    literal_pattern: ($) =>
      prec(-1, choice($.integer, $.float, $.string, $.triple_quoted_string, $.boolean, $.none)),

    constructor_pattern: ($) =>
      prec(-1, seq(
        field("constructor", $.upper_identifier),
        optional(seq("(", commaSep($._pattern), ")")),
      )),

    _block: ($) =>
      seq($.indent, repeat1(seq($._expression, optional($.newline))), $.dedent),

    // ── Terminals ─────────────────────────────────────────────────

    identifier: (_$) => /[a-z_][a-zA-Z0-9_]*/,

    upper_identifier: (_$) => /[A-Z][a-zA-Z0-9_]*/,

    integer: (_$) =>
      token(choice(
        /0[xX][0-9a-fA-F][0-9a-fA-F_]*/,
        /0[bB][01][01_]*/,
        /0[oO][0-7][0-7_]*/,
        /[0-9][0-9_]*/,
      )),

    float: (_$) => token(/[0-9][0-9_]*\.[0-9][0-9_]*([eE][+-]?[0-9]+)?/),

    string: (_$) =>
      token(seq(
        '"',
        repeat(choice(
          /[^"\\]/,
          /\\./,
        )),
        '"',
      )),

    triple_quoted_string: (_$) =>
      token(seq(
        '"""',
        repeat(choice(
          /[^"\\]/,
          /\\./,
          // One quote not followed by two more
          /"[^"]/,
          // Two quotes not followed by a third
          /""[^"]/,
        )),
        '"""',
      )),

    boolean: (_$) => choice("true", "false"),

    none: (_$) => "None",

    unit: (_$) => seq("(", ")"),
