tree-sitter-kea/test/corpus/control_flow.txt
==================
If else chain
==================

if x > 0
  "positive"
else
  "non-positive"

---

(source_file
  (if_expression
    condition: (binary_expression
      (identifier)
      (integer))
    then: (indent)
    then: (string)
    then: (dedent)
    else: (indent)
    else: (string)
    else: (dedent)))

==================
Cond expression
==================

cond
  true -> "yes"

---

(source_file
  (cond_expression
    (indent)
    (cond_arm
      condition: (boolean)
      body: (string))
    (dedent)))
